welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:8: error: not found: value leveBraisse
	baisseBrosse(); leveBraisse();
                        ^MethodsPicture:10: error: not found: value leveBraisse
	baisseBrosse(); leveBraisse();
                        ^MethodsPicture:12: error: not found: value leveBraisse
	baisseBrosse(); leveBraisse();
                        ^